--- a/assets/HTML/nossoprojeto.html
+++ b/assets/HTML/nossoprojeto.html
@@ -23,7 +23,7 @@
                 <div class="logo">
                     <img src="../img/LOGO_ORIGINAL_NAVIO_NEGREIRO-removebg-preview.png" alt="Logo Navio Negreiro" class="logo-img">
                     <div class="logo-text">
-                        <h1>Navio Negreiro</h1>
+                        <h1>Movimento Navio Negreiro</h1>
                         <p>Projeto Social de Capoeira</p>
                     </div>
                 </div>
@@ -69,11 +69,13 @@
                 <div class="story-text">
                     <h2 class="section-title">Nossa História</h2>
                     <div class="story-paragraphs">
-                        <p>O Projeto Social Navio Negreiro nasceu da necessidade de preservar e difundir a rica cultura afro-brasileira através da capoeira. Fundado em nossa comunidade, o projeto tem como símbolo o navio negreiro, representando não apenas a dor e o sofrimento do passado, mas principalmente a resistência, a força e a transformação do povo negro brasileiro.</p>
+                        <p>Associação de Capoeira Movimento Navio Negreiro <br>
+                            Fundada em 1993, em Brasília-DF, pelo Mestre Fumaça, a Associação de Capoeira Movimento Navio Negreiro é um espaço dedicado à preservação, prática e difusão da capoeira como manifestação cultural, esportiva e educacional.
+                            Nosso trabalho é pautado no respeito à tradição, no fortalecimento da identidade cultural e na promoção da saúde física e mental. Oferecemos aulas para crianças, adolescentes e adultos, sempre buscando desenvolver não apenas a técnica, mas também valores como disciplina, respeito, resiliência e espírito de comunidade.</p>
                         
-                        <p>Nossa jornada começou com um pequeno grupo de capoeiristas que acreditavam no poder transformador desta arte marcial. Ao longo dos anos, crescemos e nos tornamos um centro de referência para o ensino da capoeira, sempre mantendo vivos os valores de respeito, disciplina e união que caracterizam esta prática ancestral.</p>
+                        <p>Com sede em Brasília e extensão de projetos em Águas Lindas de Goiás, Piauí e Rio de Janeiro, seguimos navegando e espalhando a arte da capoeira por diferentes portos, formando gerações de capoeiristas que carregam consigo a história, a música e a energia dessa expressão cultural brasileira.</p>
                         
-                        <p>Hoje, o Projeto Navio Negreiro atende centenas de crianças, jovens e adultos, oferecendo não apenas o ensino da capoeira, mas também educação cultural, apoio social e oportunidades de desenvolvimento pessoal e profissional.</p>
+                        <p>Movimente-se! Seu corpo e sua mente precisam da sua reação.</p>
                     </div>
                 </div>
                 <div class="story-image">
@@ -130,7 +132,7 @@
                     <div class="stat-label">Alunos Atendidos</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-number">15</div>
+                    <div class="stat-number">32+</div>
                     <div class="stat-label">Anos de Atuação</div>
                 </div>
                 <div class="stat-card">
@@ -156,7 +158,7 @@
             <h2 class="section-title">Nossos Programas</h2>
             <div class="programs-grid">
                 <div class="program-card">
-                    <img src="../search_images/GeDaTfAT18ra.jpg" alt="Capoeira Infantil" class="program-img">
+                    <img src="../img/angelina img.jpg" alt="Capoeira Infantil" class="program-img">
                     <div class="program-content">
                         <h4>Capoeira Infantil</h4>
                         <p>Programa especialmente desenvolvido para crianças de 4 a 12 anos, focando no desenvolvimento motor, disciplina e valores culturais.</p>
@@ -207,7 +209,7 @@
                 <div class="footer-section">
                     <div class="footer-logo">
                         <img src="../img/LOGO_ORIGINAL_NAVIO_NEGREIRO-removebg-preview.png" alt="Logo Navio Negreiro" class="footer-logo-img">
-                        <h3>Navio Negreiro</h3>
+                        <h3>Movimento Navio Negreiro</h3>
                     </div>
                     <p>Projeto social dedicado à preservação da cultura afro-brasileira através da capoeira.</p>
                 </div>
