--- a/assets/HTML/proposito.html
+++ b/assets/HTML/proposito.html
@@ -23,7 +23,7 @@
                 <div class="logo">
                     <img src="../img/LOGO_ORIGINAL_NAVIO_NEGREIRO-removebg-preview.png" alt="Logo Navio Negreiro" class="logo-img">
                     <div class="logo-text">
-                        <h1>Navio Negreiro</h1>
+                        <h1>Movimento Navio Negreiro</h1>
                         <p>Projeto Social de Capoeira</p>
                     </div>
                 </div>
@@ -69,11 +69,10 @@
                 <div class="purpose-text">
                     <h2 class="section-title">Por que Existimos</h2>
                     <div class="purpose-description">
-                        <p>O Projeto Social Navio Negreiro existe para ser um farol de esperança e transformação em nossa comunidade. Acreditamos que a capoeira é muito mais que uma arte marcial - é um instrumento poderoso de educação, inclusão social e preservação cultural.</p>
-                        
-                        <p>Nosso propósito é criar um espaço onde crianças, jovens e adultos possam se conectar com suas raízes, desenvolver disciplina, autoestima e senso de comunidade, enquanto aprendem sobre a rica história e tradições da cultura afro-brasileira.</p>
-                        
-                        <p>Através da capoeira, buscamos quebrar barreiras sociais, promover a igualdade e oferecer oportunidades de crescimento pessoal e profissional para todos os membros de nossa comunidade.</p>
+                        <p>Nosso Propósito <br>
+                            Formar cidadãos conscientes, fortes e resilientes, capazes de se expressar com o corpo, a mente e o coração.
+                            Usamos a capoeira como ferramenta de educação, cultura e inclusão social, mantendo viva a tradição e abrindo espaço para novos caminhos.
+                            De Brasília para o Brasil — com projetos em Águas Lindas de Goiás, Piauí e Rio de Janeiro — seguimos navegando e espalhando a arte da capoeira por diferentes portos, formando gerações que carregam consigo a energia, a disciplina e a alegria dessa expressão cultural.</p>
                     </div>
                 </div>
                 <div class="purpose-image">
@@ -120,7 +119,7 @@
         <div class="container">
             <div class="philosophy-content">
                 <div class="philosophy-image">
-                    <img src="../search_images/p8iUXwxFLgq4.webp" alt="Filosofia da Capoeira" class="philosophy-img">
+                    <img src="../img/meninas da rede.jpg" alt="Filosofia da Capoeira" class="philosophy-img">
                 </div>
                 <div class="philosophy-text">
                     <h2 class="section-title">A Filosofia da Capoeira</h2>
@@ -221,7 +220,7 @@
                 <div class="footer-section">
                     <div class="footer-logo">
                         <img src="../img/LOGO_ORIGINAL_NAVIO_NEGREIRO-removebg-preview.png" alt="Logo Navio Negreiro" class="footer-logo-img">
-                        <h3>Navio Negreiro</h3>
+                        <h3>Movimento Navio Negreiro</h3>
                     </div>
                     <p>Projeto social dedicado à preservação da cultura afro-brasileira através da capoeira.</p>
                 </div>
