--- a/assets/HTML/sedes.html
+++ b/assets/HTML/sedes.html
@@ -23,7 +23,7 @@
                 <div class="logo">
                     <img src="../img/LOGO_ORIGINAL_NAVIO_NEGREIRO-removebg-preview.png" alt="Logo Navio Negreiro" class="logo-img">
                     <div class="logo-text">
-                        <h1>Navio Negreiro</h1>
+                        <h1>Movimento Navio Negreiro</h1>
                         <p>Projeto Social de Capoeira</p>
                     </div>
                 </div>
@@ -327,7 +327,7 @@
                 <div class="footer-section">
                     <div class="footer-logo">
                         <img src="../img/LOGO_ORIGINAL_NAVIO_NEGREIRO-removebg-preview.png" alt="Logo Navio Negreiro" class="footer-logo-img">
-                        <h3>Navio Negreiro</h3>
+                        <h3>Movimento Navio Negreiro</h3>
                     </div>
                     <p>Projeto social dedicado à preservação da cultura afro-brasileira através da capoeira.</p>
                 </div>
