--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="logo">
                     <img src="assets/img/LOGO_ORIGINAL_NAVIO_NEGREIRO-removebg-preview.png" alt="Logo Navio Negreiro" class="logo-img">
                     <div class="logo-text">
-                        <h1>Navio Negreiro</h1>
+                        <h1>Movimento Navio Negreiro</h1>
                         <p>Projeto Social de Capoeira</p>
                     </div>
                 </div>
@@ -56,7 +56,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-background">
-            <img src="assets/search_images/BN9Eli2H86CW.jpg" alt="Capoeira" class="hero-bg-img">
+            <img src="assets/img/fumaca cantando.jpg" alt="Capoeira" class="hero-bg-img">
             <div class="hero-overlay"></div>
         </div>
         <div class="container">
@@ -112,25 +112,25 @@
             <h2 class="section-title">Nossa Capoeira</h2>
             <div class="gallery-grid">
                 <div class="gallery-item">
-                    <img src="assets/search_images/sM2XGxLyX56d.jpg" alt="Roda de Capoeira" class="gallery-img">
+                    <img src="assets/img/rodo ginasio.jpg" alt="Roda de Capoeira" class="gallery-img">
                     <div class="gallery-overlay">
                         <h4>Roda de Capoeira</h4>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="assets/search_images/GeDaTfAT18ra.jpg" alt="Capoeira Infantil" class="gallery-img">
+                    <img src="assets/img/angelina img.jpg" alt="Capoeira Infantil" class="gallery-img">
                     <div class="gallery-overlay">
                         <h4>Capoeira Infantil</h4>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="assets/search_images/98QGhKaHet9w.jpg" alt="Instrutor" class="gallery-img">
+                    <img src="assets/img/mestre pacoca.jpg" alt="Instrutor" class="gallery-img">
                     <div class="gallery-overlay">
                         <h4>Nossos Instrutores</h4>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="assets/search_images/ACcChRXtRm1M.jpg" alt="Evento Especial" class="gallery-img">
+                    <img src="assets/img/maculele x.jpg" alt="Evento Especial" class="gallery-img">
                     <div class="gallery-overlay">
                         <h4>Eventos Especiais</h4>
                     </div>
@@ -157,7 +157,7 @@
                 <div class="footer-section">
                     <div class="footer-logo">
                         <img src="assets/img/LOGO_ORIGINAL_NAVIO_NEGREIRO-removebg-preview.png" alt="Logo Navio Negreiro" class="footer-logo-img">
-                        <h3>Navio Negreiro</h3>
+                        <h3>Movimento Navio Negreiro</h3>
                     </div>
                     <p>Projeto social dedicado à preservação da cultura afro-brasileira através da capoeira.</p>
                 </div>
