--- a/assets/HTML/eventos.html
+++ b/assets/HTML/eventos.html
@@ -316,7 +316,7 @@
                         <img src="../img/LOGO_ORIGINAL_NAVIO_NEGREIRO-removebg-preview.png" alt="Logo Navio Negreiro" class="footer-logo-img">
                         <h3>Movimento Navio Negreiro</h3>
                     </div>
-                    <p>Projeto social dedicado à preservação da cultura afro-brasileira através da capoeira.</p>
+                    <p>Projeto social dedicado à <br> preservação da cultura <br> afro-brasileira através da capoeira.</p>
                 </div>
                 
                 <div class="footer-section">
