--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-background">
-            <img src="assets/img/fumaca cantando.jpg" alt="Capoeira" class="hero-bg-img">
+            <img src="assets/img/rodo ginasio.jpg" alt="Capoeira" class="hero-bg-img">
             <div class="hero-overlay"></div>
         </div>
         <div class="container">
