--- a/assets/HTML/sedes.html
+++ b/assets/HTML/sedes.html
@@ -73,7 +73,7 @@
                             <i class="fas fa-map-marker-alt"></i>
                             <div>
                                 <h4>Endereço</h4>
-                                <p>Praia Linda, s/n<br>Posto integrado de segurança</p>
+                                <p>Brasília<br>Riacho Fundo II </p>
                             </div>
                         </div>
                         
@@ -81,9 +81,9 @@
                             <i class="fas fa-clock"></i>
                             <div>
                                 <h4>Horários de Funcionamento</h4>
-                                <p>Quarta: 19:00 - 20:00<br>
-                                   Sábados: 08:00 - 16:00<br>
-                                   Domingos: 08:00 - 12:00</p>
+                                <p>Segunda: 19:30 <br>
+                                   Quarta: 19:30 <br>
+                                   Sexta: 19:30 </p>
                             </div>
                         </div>
                         
@@ -121,38 +121,36 @@
             <div class="locations-grid">
                 <div class="location-card">
                     <div class="location-header">
-                        <h3>Sede Comunitária Norte</h3>
+                        <h3>Unidade Rio de Janeiro</h3>
                         <span class="location-status active">Ativa</span>
                     </div>
                     <div class="location-body">
                         <div class="location-address">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>Bairro Norte, Rua das Flores, 123</span>
+                            <span>Praia Linda, s/n,<br>Posto integrado de segurança</span>
                         </div>
                         <div class="location-schedule">
                             <h4>Horários das Aulas:</h4>
                             <ul>
-                                <li><strong>Infantil:</strong> Terças e Quintas, 16:00 - 17:00</li>
-                                <li><strong>Juvenil:</strong> Terças e Quintas, 17:00 - 18:30</li>
-                                <li><strong>Adulto:</strong> Segundas e Quartas, 19:00 - 20:30</li>
+                                <li><strong>Quartas:</strong> 19:00 - 20:00</li>
                             </ul>
                         </div>
                         <div class="location-instructor">
                             <i class="fas fa-user"></i>
-                            <span>Instrutor: Professor João</span>
+                            <span>Instrutor: Instrutora Cigana</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="location-card">
                     <div class="location-header">
-                        <h3>Sede Escola Municipal</h3>
+                        <h3>Unidade Piauí</h3>
                         <span class="location-status active">Ativa</span>
                     </div>
                     <div class="location-body">
                         <div class="location-address">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>Escola Municipal Santos Dumont</span>
+                            <span>Itaueira</span>
                         </div>
                         <div class="location-schedule">
                             <h4>Horários das Aulas:</h4>
@@ -163,20 +161,20 @@
                         </div>
                         <div class="location-instructor">
                             <i class="fas fa-user"></i>
-                            <span>Instrutor: Professora Maria</span>
+                            <span>Instrutor: Mestre Paçoca</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="location-card">
                     <div class="location-header">
-                        <h3>Sede Centro Comunitário</h3>
+                        <h3>Unidade Brasília - DF</h3>
                         <span class="location-status active">Ativa</span>
                     </div>
                     <div class="location-body">
                         <div class="location-address">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>Centro Comunitário da Vila</span>
+                            <span>Núcleo Bandeirante</span>
                         </div>
                         <div class="location-schedule">
                             <h4>Horários das Aulas:</h4>
@@ -187,34 +185,59 @@
                         </div>
                         <div class="location-instructor">
                             <i class="fas fa-user"></i>
-                            <span>Instrutor: Professor Carlos</span>
+                            <span>Instrutor: Professor Bola 7</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="location-card">
                     <div class="location-header">
-                        <h3>Sede Praia (Temporária)</h3>
-                        <span class="location-status seasonal">Sazonal</span>
+                        <h3>Unidade Brasília - DF</h3>
+                        <span class="location-status active">Ativa</span>
                     </div>
                     <div class="location-body">
                         <div class="location-address">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>Praia Central - Área de Esportes</span>
+                            <span>Águas Lindas</span>
                         </div>
                         <div class="location-schedule">
                             <h4>Horários das Aulas:</h4>
                             <ul>
-                                <li><strong>Todas as idades:</strong> Sábados, 07:00 - 09:00</li>
-                                <li><strong>Período:</strong> Dezembro a Março</li>
+                                <li><strong>Adulto:</strong> Sábados, 09:00 - 11:00</li>
+                                <li><strong>Roda Livre:</strong> Domingos, 15:00 - 17:00</li>
                             </ul>
                         </div>
                         <div class="location-instructor">
                             <i class="fas fa-user"></i>
-                            <span>Instrutor: Instrutora Deyva</span>
+                            <span>Instrutor: Professor Sérgio</span>
                         </div>
                     </div>
                 </div>
+
+                <div class="location-card">
+                    <div class="location-header">
+                        <h3>Unidade Brasília - DF</h3>
+                        <span class="location-status active">Ativa</span>
+                    </div>
+                    <div class="location-body">
+                        <div class="location-address">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <span>Águas Claras</span>
+                        </div>
+                        <div class="location-schedule">
+                            <h4>Horários das Aulas:</h4>
+                            <ul>
+                                <li><strong>Segundas:</strong> 20:00</li>
+                                <li><strong>Quartas:</strong> 20:00</li>
+                            </ul>
+                        </div>
+                        <div class="location-instructor">
+                            <i class="fas fa-user"></i>
+                            <span>Instrutor: Professor Zé Durinho</span>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
