--- a/assets/HTML/instrutores.html
+++ b/assets/HTML/instrutores.html
@@ -70,7 +70,7 @@
                     <img src="/assets/img/fumaca.jpg" alt="Instrutora Deyva" class="instructor-img">
                     <div class="instructor-cord">
                         <span class="cord-label">Graduação:</span>
-                        <span class="cord-level">Instrutora</span>
+                        <span class="cord-level">Mestre</span>
                     </div>
                 </div>
                 
@@ -89,7 +89,7 @@
                     <div class="instructor-achievements">
                         <h4>Principais Conquistas:</h4>
                         <ul>
-                            <li>25+ anos de experiência em capoeira</li>
+                            <li>32+ anos de experiência em capoeira</li>
                             <li>Mestre do Projeto Navio Negreiro</li>
                             <li>Especialista em Cultura Afro-Brasileira</li>
                             <li>Reconhecimento municipal pelos serviços prestados</li>
@@ -105,30 +105,7 @@
         <div class="container">
             <h2 class="section-title">Nossa Equipe</h2>
             <div class="instructors-grid">
-                <div class="instructor-card">
-                    <div class="instructor-photo">
-                        <img src="../search_images/EoMhZUjPj0iI.jpg" alt="Professor João" class="instructor-card-img">
-                        <div class="instructor-overlay">
-                            <div class="instructor-social">
-                                <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
-                                <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="instructor-details">
-                        <h3>Instrutora Cigana</h3>
-                        <p class="instructor-role">Instrutora - Sede RJ</p>
-                        <div class="instructor-cord-small">
-                            <span class="cord-color" style="background: #008000;"></span>
-                            <span>Corda Verde</span>
-                        </div>
-                        <p class="instructor-description">Especialista em capoeira infantil, Cigana tem 15 anos de experiência e é conhecida por sua paciência e didática com as crianças.</p>
-                        <div class="instructor-specialties">
-                            <span class="specialty">Capoeira Infantil</span>
-                            <span class="specialty">Instrumentos</span>
-                        </div>
-                    </div>
-                </div>
+                
 
                 <div class="instructor-card">
                     <div class="instructor-photo">
@@ -232,7 +209,7 @@
 
                 <div class="instructor-card">
                     <div class="instructor-photo">
-                        <img src="../search_images/qLmujlLPHn2v.jpg" alt="Professora Lucia" class="instructor-card-img">
+                        <img src="../search_images/EoMhZUjPj0iI.jpg" alt="Professor João" class="instructor-card-img">
                         <div class="instructor-overlay">
                             <div class="instructor-social">
                                 <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
@@ -241,19 +218,20 @@
                         </div>
                     </div>
                     <div class="instructor-details">
-                        <h3>Professora Lucia</h3>
-                        <p class="instructor-role">Instrutora de Dança</p>
+                        <h3>Instrutora Cigana</h3>
+                        <p class="instructor-role">Instrutora - Sede RJ</p>
                         <div class="instructor-cord-small">
-                            <span class="cord-color" style="background: #FFFF00;"></span>
-                            <span>Corda Amarela</span>
+                            <span class="cord-color" style="background: #008000;"></span>
+                            <span>Corda Verde</span>
                         </div>
-                        <p class="instructor-description">Bailarina e capoeirista, Lucia traz a graciosidade da dança para os movimentos da capoeira.</p>
+                        <p class="instructor-description">Especialista em capoeira infantil, Cigana tem 15 anos de experiência e é conhecida por sua paciência e didática com as crianças.</p>
                         <div class="instructor-specialties">
-                            <span class="specialty">Ginga</span>
-                            <span class="specialty">Expressão</span>
+                            <span class="specialty">Capoeira Infantil</span>
+                            <span class="specialty">Instrumentos</span>
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
     </section>
