--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2025 Navio Negreiro - Projeto Social de Capoeira. Todos os direitos reservados.</p>
+                <p>&copy; 2025 Movimento Navio Negreiro - Projeto Social de Capoeira. Todos os direitos reservados.</p>
             </div>
         </div>
     </footer>
