--- a/assets/HTML/sedes.html
+++ b/assets/HTML/sedes.html
@@ -386,7 +386,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2024 Navio Negreiro - Projeto Social de Capoeira. Todos os direitos reservados.</p>
+                <p>&copy; 2025 Movimento Navio Negreiro - Projeto Social de Capoeira. Todos os direitos reservados.</p>
             </div>
         </div>
     </footer>
