--- a/assets/HTML/contribua.html
+++ b/assets/HTML/contribua.html
@@ -23,8 +23,8 @@
                 <div class="logo">
                     <img src="../img/LOGO_ORIGINAL_NAVIO_NEGREIRO-removebg-preview.png" alt="Logo Navio Negreiro" class="logo-img">
                     <div class="logo-text">
-                        <h1>Movimento Navio Negreiro</h1>
-                        <p>Projeto Social de Capoeira</p>
+                        <h1>Associação de Capoeira Movimento Navio Negreiro</h1>
+                        
                     </div>
                 </div>
                 
