--- a/assets/HTML/eventos.html
+++ b/assets/HTML/eventos.html
@@ -23,8 +23,8 @@
                 <div class="logo">
                     <img src="../img/LOGO_ORIGINAL_NAVIO_NEGREIRO-removebg-preview.png" alt="Logo Navio Negreiro" class="logo-img">
                     <div class="logo-text">
-                        <h1>Movimento Navio Negreiro</h1>
-                        <p>Projeto Social de Capoeira</p>
+                        <h1>Associação de Capoeira Movimento Navio Negreiro</h1>
+
                     </div>
                 </div>
                 
@@ -63,6 +63,7 @@
     </section>
 
     <!-- Próximos Eventos -->
+     <!--  
     <section class="upcoming-events">
         <div class="container">
             <h2 class="section-title">Próximos Eventos</h2>
@@ -146,7 +147,7 @@
             </div>
         </div>
     </section>
-
+  -->
     <!-- Tipos de Eventos -->
     <section class="event-types">
         <div class="container">
@@ -217,7 +218,7 @@
             <h2 class="section-title">Eventos Realizados</h2>
             <div class="past-events-gallery">
                 <div class="gallery-item">
-                    <img src="../search_images/ACcChRXtRm1M.jpg" alt="Roda de Capoeira" class="gallery-img">
+                    <img src="../img/rodo ginasio.jpg" alt="Roda de Capoeira" class="gallery-img">
                     <div class="gallery-overlay">
                         <h4>Roda de Capoeira 2023</h4>
                         <p>Dezembro 2023</p>
@@ -233,7 +234,7 @@
                 </div>
                 
                 <div class="gallery-item">
-                    <img src="../search_images/8XLKlclBBeCY.jpg" alt="Apresentação Cultural" class="gallery-img">
+                    <img src="../img/maculele.jpg" alt="Apresentação Cultural" class="gallery-img">
                     <div class="gallery-overlay">
                         <h4>Apresentação Cultural</h4>
                         <p>Outubro 2023</p>
