--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <div class="logo">
                     <img src="assets/img/LOGO_ORIGINAL_NAVIO_NEGREIRO-removebg-preview.png" alt="Logo Navio Negreiro" class="logo-img">
                     <div class="logo-text">
-                        <h1>Movimento Navio Negreiro</h1>
-                        <p>Projeto Social de Capoeira</p>
+                        <h1>Associação de Capoeira Movimento Navio Negreiro</h1>
+
                     </div>
                 </div>
                 
@@ -62,8 +62,9 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text">
+                    <!--
                     <h2 class="hero-title">Preservando a Cultura Afro-Brasileira</h2>
-                    <p class="hero-subtitle">Através da capoeira, promovemos inclusão social, educação e resgate cultural em nossa comunidade.</p>
+                    <p class="hero-subtitle">Através da capoeira, promovemos inclusão social, educação e resgate cultural em nossa comunidade.</p> -->
                     <div class="hero-buttons">
                         <a href="assets/HTML/nossoprojeto.html" class="btn btn-primary">Conheça o Projeto</a>
                         <a href="assets/HTML/contribua.html" class="btn btn-secondary">Como Contribuir</a>
