--- a/assets/HTML/nossoprojeto.html
+++ b/assets/HTML/nossoprojeto.html
@@ -23,8 +23,8 @@
                 <div class="logo">
                     <img src="../img/LOGO_ORIGINAL_NAVIO_NEGREIRO-removebg-preview.png" alt="Logo Navio Negreiro" class="logo-img">
                     <div class="logo-text">
-                        <h1>Movimento Navio Negreiro</h1>
-                        <p>Projeto Social de Capoeira</p>
+                        <h1>Associação de Capoeira Movimento Navio Negreiro</h1>
+
                     </div>
                 </div>
                 
@@ -79,7 +79,7 @@
                     </div>
                 </div>
                 <div class="story-image">
-                    <img src="../search_images/fAI1Kmaly7Ds.jpg" alt="História da Capoeira" class="story-img">
+                    <img src="../img/fumaca cantando.jpg" alt="História da Capoeira" class="story-img">
                 </div>
             </div>
         </div>
