--- a/assets/HTML/nossoprojeto.html
+++ b/assets/HTML/nossoprojeto.html
@@ -236,10 +236,15 @@
                 <div class="footer-section">
                     <h4>Redes Sociais</h4>
                     <div class="social-links">
+                        <a href="https://www.instagram.com/navionegreiro2022?igsh=ZHZqOXlneml1NmJp" class="social-link"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/cdb_navio_negreiro?igsh=MXR6aXl1d2tmemc4eg==" class="social-link"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/cigana_capoeira?igsh=NXNuZHMzMXE5eWx4&utm_source=qr" class="social-link"><i class="fab fa-instagram"></i></a>
+                        <!--
                         <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
                         <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
                         <a href="#" class="social-link"><i class="fab fa-youtube"></i></a>
                         <a href="#" class="social-link"><i class="fab fa-whatsapp"></i></a>
+                        -->
                     </div>
                 </div>
             </div>
