--- a/assets/HTML/instrutores.html
+++ b/assets/HTML/instrutores.html
@@ -67,7 +67,7 @@
         <div class="container">
             <div class="instructor-content">
                 <div class="instructor-image">
-                    <img src="/assets/img/fumaca.jpg" alt="Instrutora Deyva" class="instructor-img">
+                    <img src="/assets/img/fumaca.jpg" alt="Mestre Fumaça" class="instructor-img">
                     <div class="instructor-cord">
                         <span class="cord-label">Graduação:</span>
                         <span class="cord-level">Mestre</span>
