--- a/assets/HTML/sedes.html
+++ b/assets/HTML/sedes.html
@@ -56,8 +56,8 @@
     <section class="page-hero">
         <div class="container">
             <div class="page-hero-content">
-                <h1 class="page-title">Nossas Sedes</h1>
-                <p class="page-subtitle">Encontre a sede mais próxima de você e venha fazer parte da nossa família</p>
+                <h1 class="page-title">Nossas Unidades</h1>
+                <p class="page-subtitle">Encontre a unidade mais próxima de você e venha fazer parte da nossa família</p>
             </div>
         </div>
     </section>
@@ -67,7 +67,7 @@
         <div class="container">
             <div class="location-content">
                 <div class="location-info">
-                    <h2 class="section-title">Sede Principal</h2>
+                    <h2 class="section-title">Sede</h2>
                     <div class="location-details">
                         <div class="detail-item">
                             <i class="fas fa-map-marker-alt"></i>
@@ -117,7 +117,7 @@
     <!-- Outras Sedes -->
     <section class="other-locations">
         <div class="container">
-            <h2 class="section-title">Outras Sedes</h2>
+            <h2 class="section-title">Outras Unidades</h2>
             <div class="locations-grid">
                 <div class="location-card">
                     <div class="location-header">
