--- a/assets/HTML/sedes.html
+++ b/assets/HTML/sedes.html
@@ -192,7 +192,7 @@
 
                 <div class="location-card">
                     <div class="location-header">
-                        <h3>Unidade Brasília - DF</h3>
+                        <h3>Unidade Goiás - GO</h3>
                         <span class="location-status active">Ativa</span>
                     </div>
                     <div class="location-body">
