--- a/assets/HTML/instrutores.html
+++ b/assets/HTML/instrutores.html
@@ -69,7 +69,7 @@
                 <div class="instructor-image">
                     <img src="../img/fumaca.jpg" alt="Mestre Fumaça" class="instructor-img">
                     <div class="instructor-cord">
-                        <span class="cord-label">Graduação:</span>
+                       <!-- <span class="cord-label">Graduação:</span>-->
                         <span class="cord-level">Mestre</span>
                     </div>
                 </div>
