--- a/assets/HTML/instrutores.html
+++ b/assets/HTML/instrutores.html
@@ -56,7 +56,7 @@
     <section class="page-hero">
         <div class="container">
             <div class="page-hero-content">
-                <h1 class="page-title">Nossos Instrutores</h1>
+                <h1 class="page-title">Nossos Educadores da Capoeira</h1>
                 <p class="page-subtitle">Conheça os mestres e professores que dedicam suas vidas à preservação da capoeira</p>
             </div>
         </div>
