--- a/assets/HTML/instrutores.html
+++ b/assets/HTML/instrutores.html
@@ -134,7 +134,7 @@
 
                 <div class="instructor-card">
                     <div class="instructor-photo">
-                        <img src="../search_images/ikVhVhNRYECw.jpeg" alt="Professor Carlos" class="instructor-card-img">
+                        <img src="../img/Professor bola 7.jpg" alt="Professor Carlos" class="instructor-card-img">
                         <div class="instructor-overlay">
                             <div class="instructor-social">
                                 <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
